classDiagram
    direction LR
    Driver "1" *-- "0..*" Car : owns
    Driver "1" *-- "0..*" Travel : driver
    Car "0..*" o-- "1" Brand : has
    Car "0..*" o-- "1" Model : has
    Car "1" -- "0..*" Travel : has
    Brand "1" *-- "1..*" Model : has
    Travel "1" *-- "1" TravelPreference : has
    Driver --|> User : &ltextends&gt

    class Driver {
        +addCar(Car)
        +getCars()
        +canPublishTravel()
    }
    class User {
        +string[] roles
        +getUuid()
        +getRoles()
        +addRole(RoleEnum)
    }
    class Car {
        +getBrand()
        +getModel()
        +getColor()
        +getFuelType()
        +getTotalSeats()
        +getPlate()
        +setBrand(Brand)
        +setModel(Model)
        +setColor(ColorEnum)
        +setFuelType(FuelTypeEnum)
        +setTotalSeats(int)
        +setPlate(string)
    }
    class Brand {
        +getName()
        +setName(string)
    }
    class Model {
        +getName()
        +setBrand(Brand)
        +setName(string)
    }
    class Travel {
        +getCar()
        +getDriver()
        +getDeparture()
        +getArrival()
        +getDate()
        +getPassengersMax()
        +getDuration()
        +getDistance()
        +getCost()
        +getState()
        +getTravelPreference()
        +setCar(Car)
        +setDriver(Driver)
        +setDeparture(string)
        +setArrival(string)
        +setDate(DateTimeImmutable)
        +setPassengersMax(int)
        +setDuration(int)
        +setDistance(int)
        +setCost(float)
        +setState(TravelStateEnum)
        +setTravelPreference(TravelPreference)
    }
    class TravelPreference {
        +getIsPetsAllowed()
        +getIsSmokingAllowed()
        +getLuggageSize()
        +getComment()
        +setIsPetsAllowed(bool)
        +setIsSmokingAllowed(bool)
        +setLuggageSize(LuggageSizeEnum)
        +setComment(string)
    }